<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FeedDetailActivity">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
        >

        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/name"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/name"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
        
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"
		    />
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/description"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/description"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"		    
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/visibility"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/visibility"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/status"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/status"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/type"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/type"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/created"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/created"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/updated"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/updated"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5sp"
		    android:layout_marginBottom="5sp"
		    android:background="@android:drawable/divider_horizontal_dark"/>
		
        <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/location"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
		    android:id="@+id/location"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />
		
		</LinearLayout>
    
    
</ScrollView>
